objects/ssot__GiftDefaultDesignation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AllocatedPercentage__c</fullName>
        <label>Allocated Percentage</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftDesignationId__c</fullName>
        <label>Gift Designation</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Gift Default Designation Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentRecordId__c</fullName>
        <label>Parent Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentRecordObject__c</fullName>
        <label>Parent Record Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761238765_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftDefaultDesignation_GiftDesignati_rel</label>
        <referenceTo>ssot__GiftDesignation__dlm</referenceTo>
        <relationshipLabel>GiftDefaultDesignation_GiftDesignati_rel</relationshipLabel>
        <relationshipName>rel_1697761238765_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761238837_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftDefaultDesignation_ParentRecordI_rel</label>
        <referenceTo>ssot__Campaign__dlm</referenceTo>
        <relationshipLabel>GiftDefaultDesignation_ParentRecordI_rel</relationshipLabel>
        <relationshipName>rel_1697761238837_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761238897_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftDefaultDesignation_ParentRecordI_rel</label>
        <referenceTo>ssot__GiftCommitment__dlm</referenceTo>
        <relationshipLabel>GiftDefaultDesignation_ParentRecordI_rel</relationshipLabel>
        <relationshipName>rel_1697761238897_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>